--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,12 @@ body{
     margin: 0;
 }
 
-
 .main-header{
     background-image: url("/image/logo/Reservia@3x.png");
     background-repeat: no-repeat;
     margin-left: 40px;
     align-items: center;
-    /*Logo et menu en grille*/
+    /*Logo et menu en grille 2 colonnes*/
     display: grid;
     grid-template-columns: 1fr 1fr
 }
@@ -31,7 +30,6 @@ body{
     list-style: none;
     align-items: center;
     margin-left : 150px;
-
 }
 
 a{
@@ -53,9 +51,137 @@ a:focus{
     color:blue;
     font-weight: bold;
 }
+.NoirPlus{
+    color:black;
+    font-weight: bold;
+    border-top: none;
+    font-size: 14px;
+    line-height: 51px;
+    margin-left: 20px;
+}
+.NoirPlus:hover{
+    border-top: none;
+}
+
+/*Les titres */
+h1{
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 35px;
+    margin-bottom: 5px;
+}
+h2{
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 7px;
+}
+h3{
+    font-size: 13px;
+    line-height: 7px;
+}
+p{
+    font-size: 12px;
+    font-weight: normal;
+    /*on réduit l'interligne un peu trop grande*/
+    line-height: 6px;
+    margin-top: 0;
+}
 
 
-.hebergement{
+/*Section Filtre */
+.sectionFiltre{
+    display: flex;
+    margin-bottom: 40px;
+    margin-left: 40px;
+    margin-right: 30px;
+    flex-direction: column;
+    padding:0;
+}
+.filtreTitre{
+      
+    margin-bottom: 10px;
+}
+.filtreTitre h1{
+    margin-left: 0;
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+.filtreTitre p{
+    font-size: 14px;
+}
+
+.fltreRecherche{
+    display: grid;
+    grid-template-columns: 40px 180px 100px;
+    align-items: center;
+    height: 45px;
+    margin-bottom: 30px;
+
+}
+.styleBouton{
+    border: 0;
+    height: inherit;
+    /*line-height: inherit;*/
+    padding: 0 10px;
+    font-size: 15px;
+    text-align: center;
+    color: #fff;
+    
+    border-radius: 0 10px 10px 0;
+    background-color: blue;
+    
+}
+.puceNavig{
+    height: inherit;
+    display: block; 
+    text-align: center;
+    line-height: 45px;
+    font-size: 14px;
+    border-radius: 10px 0 0 10px ;
+    background-color: rgb(242, 242, 242);
+    border-color:red;
+}
+
+.inputVille{
+    display: block;
+    height: inherit;
+    text-align: center;
+    padding: 0;
+    
+    /*background-color: green;*/
+}
+.inputVille input{
+    border-color:rgb(242, 242, 242);
+    border-left: none;
+    border-right: none;
+    height: 39px;
+    padding-left: 10px;
+    font-size: 14px;
+    font-style: unset;
+}
+
+.filtreDetails{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr  ;
+    
+    margin-bottom: 20px;
+    align-items: center;
+    height: 45px;
+}
+.detailFiltreDetails{
+    display: flex;
+}
+.puceDuLibelle{
+    height: inherit;
+    display: block; 
+    text-align: center;
+    line-height: inherit;
+    background-color: red;
+    border-radius: 50%;
+}
+
+/* Partie section hebergement */
+.sectionHebergement{
     display: flex;
     margin-bottom: 40px;
     margin-left: 40px;
@@ -70,47 +196,45 @@ a:focus{
     padding-right: 20px;
     margin-right: 30px;
 }
-h1{
-    font-size: 18px;
-    margin-left: 20px;
-    margin-top: 35px;
-    margin-bottom: 5px;
-}
-h3{
-    font-size: 17px;
-    margin: 20px;
-    line-height: 51px;
-}
-
 
 #box1{
-    width: 100%;
-    background-color: rgb(242, 242, 242);
+    /* dans les 70% de gauche, on crée une sorte de grille de 3 colonnes qui prennent la totalite 100%  des 70 %*/
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    background-color: rgb(242, 242, 242);
+    /*les angles de la boite sont légèrement arrondis*/
     border-radius: 20px;
 }
 
 .detail{
+    /*dans box1 on intègre des blocks de details*/
+    /*chaque bloc  va contenir une image, un titre (nom de l'hotel en h2), un petit texte avec le prix et une note sous forme d'étoiles*/
+    display: block;
     border: 5px;
     background-color: white;
+    /*les coins du container ne sont pas à angle droit mais un peu arrondis*/
     border-radius: 20px;
+    /*une légère ombre portée, je ne suis pas sure que c'est dans l'original, j'ai un doute*/
     box-shadow: 2px 2px 1px lightgray;
+    /*petite marge intérieure*/
     padding: 5px;
-    display: block;
     flex-direction: column;
+    /*on écarte chaque bloque de 10px les uns des autres*/
     margin: 10px;
-}
-.image {
-    background-size: cover;
-    background-position-y: center;
-    /*align-items:stretch;*/
-    width: 100%;
-    height: 110px;
-    border-radius: 20px 20px 0 0;
-    display: grid;
+    /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
     overflow: hidden;
 }
+.image {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    height: 110px;
+    border-radius: 20px 20px 0 0;
+    /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+    object-fit: cover; 
+}
+
 .texte{
     overflow: hidden;
     background-color: white;
@@ -118,38 +242,23 @@ h3{
     flex-direction: column;
     padding-left: 15px;
     border-radius:  0 0 20px 20px;
-   
 }
-h2{
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 7px;
-    
-}
-p{
-    font-size: 12px;
-    font-weight: normal;
-    line-height: 6px;
-    margin-top: 0;
-}
+/*couleur des étoiles*/
 .blue{
     color :  rgb(0, 101, 252);
-    margin-left : 1px;
 }
 .gray{
-    color : lightgray; 
-    margin-left : 1px;
+    color : rgb(185, 185, 185); 
 }
 .etoiles{
-    /*margin-left: 0.9rem;*/
     font-size: 9px;
     margin-top: -0.2rem;
     display: flex;
-    /*line-height: 5px;*/
     margin-bottom: 5px;
+    margin-left : 1px;
 }
 
-
+/*Les plus populaires dans la zone Hebergement toujours*/
 #bigboxPopu{
     width: 30%;
     background-color: rgb(242, 242, 242);
@@ -166,16 +275,11 @@ p{
     align-items: flex-end;
     justify-content: space-between;
 }
-.titrePopu h1{
-    font-size: 18px;
-    /*margin-left: 20px;
-    margin-top: 35px;
-    margin-bottom: 5px;*/
-}
+
 #box2{
     width: 100%;
     background-color: rgb(242, 242, 242);
-    display: Flex;
+    display: flex;
     border-radius: 20px;
     flex-direction: column;
 }
@@ -186,58 +290,55 @@ p{
     border-radius: 20px;
     box-shadow: 2px 2px 1px lightgray;
     padding: 3px;
-    display: flex;
-    margin: 1rem;
-    height: 125px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 10px;
+    /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
+    overflow: hidden;
+    height: 120px;
 }
 .imagePopu{
-    background-size: cover;
-    background-position-y: left;
-    width: 125px;
-    /*height: 100%;*/
-    border-radius:  20px 0 0 20px;
-    display: grid;
+    display: block;
+    width: 110px;
+    height: 100%;
     overflow: hidden;
-
+    border-radius: 20px 0 0 20px;
+    object-fit: cover; 
 }
+
 .textePopu{
     background-color: white;
     display: flex;
     flex-direction: column;
     padding-left: 15px;
-    
     border-radius:   0 20px 20px 0 ;
     justify-content: flex-start;
-    
-    
-   
 }
 .textePopu h2{
     line-height: 14px; 
 }
 
-.textePopu p{
-    
-    /*margin-bottom: 40px;*/
- }
-
-
-
+/* Section Footer avec différents liens de navigation vers les autres pages du site*/
 .boxFooter{
     width: 100%;
     background-color: rgb(242, 242, 242);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-around;
 }
-.boxFooter div{
-    margin: 2rem;
+.boxFooter a{
+    font-size: 14px;
+    line-height: 25px;
+    border-top: none;
+    margin-left: 20px;
 }
-.boxFooter h1{
-    font-size: 16px;
+.boxFooter ul {
+    list-style-type: none;
 }
-.boxFooter p{
-    font-size: 15px;
+.boxFooter:hover {
+    border-top: none;
 }
+
 
 
 
