--- a/css/style.css
+++ b/css/style.css
@@ -66,17 +66,19 @@ a:focus{
 /*Les titres */
 h1{
     font-size: 20px;
+    margin-left: 0;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+h2{
+    font-size: 20px;
     margin-left: 20px;
     margin-top: 35px;
     margin-bottom: 5px;
 }
-h2{
+h3{
     font-size: 14px;
     font-weight: bold;
-    line-height: 7px;
-}
-h3{
-    font-size: 13px;
     line-height: 7px;
 }
 p{
@@ -86,104 +88,149 @@ p{
     line-height: 6px;
     margin-top: 0;
 }
+.texteGras{
+    font-weight: bold;
+}
 
 
-/*Section Filtre */
+/*Section Filtre ..........................................................................................*/
 .sectionFiltre{
-    display: flex;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
     margin-left: 40px;
     margin-right: 30px;
-    flex-direction: column;
     padding:0;
 }
-.filtreTitre{
-      
-    margin-bottom: 10px;
+.filtreTitre{ 
+    margin-bottom: 30px;
 }
-.filtreTitre h1{
-    margin-left: 0;
-    margin-bottom: 10px;
-    margin-top: 15px;
-}
+
 .filtreTitre p{
     font-size: 14px;
 }
 
 .fltreRecherche{
-    display: grid;
-    grid-template-columns: 40px 180px 100px;
+    display: inline-flex;
     align-items: center;
-    height: 45px;
+    height: 40px;
+    border-top: solid 1px rgb(242, 242, 242);
+    border-bottom: solid 1px rgb(242, 242, 242);
+    border-radius: 10px;
     margin-bottom: 30px;
+    margin-right: 250px;
 
 }
 .styleBouton{
-    border: 0;
-    height: inherit;
-    /*line-height: inherit;*/
+    border: none;
+    height: 41px;
     padding: 0 10px;
     font-size: 15px;
     text-align: center;
     color: white;
     border-radius: 0 10px 10px 0;
     background-color: blue;
+    cursor: pointer;
     
 }
 .puceNavig{
     height: inherit;
     display: block; 
     text-align: center;
-    line-height: 45px;
+    line-height: 40px;
     font-size: 14px;
     border-radius: 10px 0 0 10px ;
     background-color: rgb(242, 242, 242);
+    padding-left: 15px;
+    padding-right: 15px;
 
 }
 
 .inputVille{
     display: block;
-    height: inherit;
+    height: 40px;
     text-align: center;
     padding: 0;
-    
-    /*background-color: green;*/
 }
 .inputVille input{
     border-color:rgb(242, 242, 242);
-    border-left: none;
-    border-right: none;
-    height: 39px;
+    border: none;
+    height: 40px;
     padding-left: 10px;
+    padding-bottom: 0px;
+    padding-top:0px;
     font-size: 14px;
-    font-style: unset;
+    font-weight: bold;
 }
 
 .filtreDetails{
-    display: grid;
-    grid-template-columns: 70px 1fr 1fr 1fr 1fr  ;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    height: 45px;
-    background-color: green;
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 30px;
+    height: 35px;
+    margin-right: 150px;
+}
+.titreFiltreDetails{
+    margin-right: 30px;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .detailFiltreDetails{
-    display: grid;
-    grid-template-columns: 45px 150px;
-    height: inherit;
+    display: inline-flex;
+    align-items: center;
+    margin-right: 20px;
+    border-radius: 50px ;
+    border: solid 2px lightgray;
+    border-left : none;
 }
+
 .puceDuLibelle{
-    height: inherit;
-    width: 45px;
-    display: block; 
-    text-align: center;
-    background-color: red;
+    height: 36px;
+    width: 35px;
+    display: flex; 
+    /*alignement horizontal*/
+    justify-content: center;
+    /*alignement vertical*/
+    align-items: center;
+    color: blue;
+    background-color:  rgb(222, 235, 255);
+    border-radius: 50px;
+    cursor: pointer;
+}
+   
+.libelle{
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.filtreInfo{
+    display: inline-flex;
+    align-items: center;
+}
+.puceDeLInfo{
+    height: 17px;
+    width: 17px;
+    display: flex; 
+    /*alignement horizontal*/
+    justify-content: center;
+    /*alignement vertical*/
+    align-items: center;
+    color:white;
+    background-color :blue;
     border-radius: 50px;
 }
+.textInfo{
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 14px;
+    font-style: italic;
+}
 
 
-/* Partie section hebergement */
+/* Partie section hebergement .............................................................................*/
 .sectionHebergement{
+    /*2 blocks seront cote  a cote*/
     display: flex;
     margin-bottom: 40px;
     margin-left: 40px;
@@ -191,6 +238,7 @@ p{
 }
 
 #bigboxH{
+    /*la section hebergement est divisee de gauche à droite en 2 sous section hebergement et les plus populaires respectivement 70% et 30%*/
     width: 70%;
     background-color: rgb(242, 242, 242);
     border-radius: 20px;
@@ -199,10 +247,10 @@ p{
     margin-right: 30px;
 }
 
-#box1{
+.box1{
     /* dans les 70% de gauche, on crée une sorte de grille de 3 colonnes qui prennent la totalite 100%  des 70 %*/
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     width: 100%;
     background-color: rgb(242, 242, 242);
     /*les angles de la boite sont légèrement arrondis*/
@@ -212,7 +260,6 @@ p{
 .detail{
     /*dans box1 on intègre des blocks de details*/
     /*chaque bloc  va contenir une image, un titre (nom de l'hotel en h2), un petit texte avec le prix et une note sous forme d'étoiles*/
-    display: block;
     border: 5px;
     background-color: white;
     /*les coins du container ne sont pas à angle droit mais un peu arrondis*/
@@ -220,28 +267,32 @@ p{
     /*une légère ombre portée, je ne suis pas sure que c'est dans l'original, j'ai un doute*/
     box-shadow: 2px 2px 1px lightgray;
     /*petite marge intérieure*/
-    padding: 5px;
-    flex-direction: column;
+    padding: 3px;
     /*on écarte chaque bloque de 10px les uns des autres*/
     margin: 10px;
     /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
     overflow: hidden;
+    cursor: pointer;
 }
 .image {
-    display: block;
     width: 100%;
-    overflow: hidden;
     height: 110px;
     border-radius: 20px 20px 0 0;
     /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
-    object-fit: cover; 
+    object-fit: cover;
+    /*overflow: hidden;*/
 }
+/*pour test zoom dans l'image*/
+.detail img {
+    transition: transform .5s ease;
+}
+.detail:hover img {
+    transform: scale(2.5);
+  }
+  
 
 .texte{
-    overflow: hidden;
     background-color: white;
-    display: grid;
-    flex-direction: column;
     padding-left: 15px;
     border-radius:  0 0 20px 20px;
 }
@@ -255,13 +306,14 @@ p{
 .etoiles{
     font-size: 9px;
     margin-top: -0.2rem;
+    /*les5 etoiles "enfants" seront en ligne horizontales*/
     display: flex;
     margin-bottom: 5px;
     margin-left : 1px;
 }
 
 /*Les plus populaires dans la zone Hebergement toujours*/
-#bigboxPopu{
+.bigboxPopu{
     width: 30%;
     background-color: rgb(242, 242, 242);
     border-radius: 20px;
@@ -271,14 +323,17 @@ p{
 .titrePopu{
     font-size: 18px;
     margin-left: 0px;
-    /*margin-top: 35px;*/
     margin-bottom: 5px;
     display: flex;
-    align-items: flex-end;
+    align-items: baseline;
     justify-content: space-between;
 }
+.fafa35{
+    /*icone a la m^me marge que le titre pour l alignement*/
+    margin-top: 35px;
+}
 
-#box2{
+.box2{
     width: 100%;
     background-color: rgb(242, 242, 242);
     display: flex;
@@ -290,6 +345,7 @@ p{
     border: 5px;
     background-color: white;
     border-radius: 20px;
+    /*meme ombre que les hebergements*/
     box-shadow: 2px 2px 1px lightgray;
     padding: 3px;
     display: grid;
@@ -300,7 +356,6 @@ p{
     height: 120px;
 }
 .imagePopu{
-    display: block;
     width: 110px;
     height: 100%;
     overflow: hidden;
@@ -310,23 +365,74 @@ p{
 
 .textePopu{
     background-color: white;
-    display: flex;
-    flex-direction: column;
     padding-left: 15px;
     border-radius:   0 20px 20px 0 ;
     justify-content: flex-start;
 }
-.textePopu h2{
+.textePopu h3{
     line-height: 14px; 
 }
 
-/* Section Footer avec différents liens de navigation vers les autres pages du site*/
+
+/*Section Activités ...................................................................................*/
+.sectionActivites{
+    margin-bottom: 40px;
+    margin-left: 40px;
+    margin-right: 30px;
+}
+
+#listeActivite{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+}
+.detailActivite{
+    border: 5px;
+    background-color: white;
+    /*les coins du container ne sont pas à angle droit mais un peu arrondis*/
+    border-radius: 20px;
+    /*ombre portée*/
+    box-shadow: 3px 4px 2px rgb(242, 242, 242);
+    /*on écarte chaque bloque de 10px les uns des autres*/
+    margin: 10px;
+    /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
+    overflow: hidden;
+}
+.imageActivite {
+    width: 100%;
+    height: 360px;
+    border-radius: 20px 20px 0 0;
+    /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+    object-fit: cover; 
+}
+.imageActivite2 {
+    width: 100%;
+    height: 150px;
+    border-radius: 20px 20px 0 0;
+    /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+    object-fit: cover; 
+}
+
+.texteActivite{
+    background-color: white;
+    padding-left: 15px;
+    border-radius:  0 0 20px 20px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+
+/* Section Footer avec différents liens de navigation vers les autres pages du site ...................*/
 .boxFooter{
     width: 100%;
     background-color: rgb(242, 242, 242);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     justify-content: space-around;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+
 }
 .boxFooter a{
     font-size: 14px;
