--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-/*@charset="utf-8"*/
-
 @font-face {
     font-family: 'Raleway';
     src: url('/font/Raleway-ExtraBold.ttf');
 }
+
 body{
     background-color: white;
     font-family: 'Raleway', Sans-serif;
@@ -11,57 +10,44 @@ body{
 }
 
 .main-header{
-    background-image: url("/image/logo/Reservia@3x.png");
-    background-repeat: no-repeat;
     margin-left: 40px;
     align-items: center;
-    /*Logo et menu en grille 2 colonnes*/
-    display: grid;
-    grid-template-columns: 1fr 1fr
+    display: inline-flex;
 }
+
 
 .menu{
-    display: flex;
+    display: inline-flex;
     font-size: 14px;
-    line-height: 3rem;
-    /*flex: 1;*/
-    justify-content: space-around;
-    /*pas de puce devant les éléments de menu*/
     list-style: none;
-    align-items: center;
-    margin-left : 150px;
+    margin-left : 230px;
+    margin-top: 25px;
 }
 
-a{
+.menu a{
     color:rgba(144, 144, 144);
     text-decoration: none;
-    border-top: 2px solid white;
     padding-top: 20px;
-    border-top: over;
+    margin-left: 150px;
 }
-a:hover /* Apparence au survol des liens */
-{
+/* Apparence au survol des liens */
+.menu a:hover {
     color: blue;
     border-top: 2px solid blue;
 }
-a:focus{
+.nmenu a:focus{
     color:gray;
 }
-.bleuGras{
+.menu .bleuGras{
     color:blue;
     font-weight: bold;
 }
 .NoirPlus{
-    color:black;
     font-weight: bold;
-    border-top: none;
     font-size: 14px;
-    line-height: 51px;
-    margin-left: 20px;
+    text-decoration: none;
 }
-.NoirPlus:hover{
-    border-top: none;
-}
+
 
 /*Les titres */
 h1{
@@ -79,13 +65,10 @@ h2{
 h3{
     font-size: 14px;
     font-weight: bold;
-    line-height: 7px;
 }
 p{
     font-size: 12px;
     font-weight: normal;
-    /*on réduit l'interligne un peu trop grande*/
-    line-height: 6px;
     margin-top: 0;
 }
 .texteGras{
@@ -95,6 +78,8 @@ p{
 
 /*Section Filtre ..........................................................................................*/
 .sectionFiltre{
+    display: flex;
+    flex-direction: column;
     margin-bottom: 35px;
     margin-left: 40px;
     margin-right: 30px;
@@ -112,12 +97,7 @@ p{
     display: inline-flex;
     align-items: center;
     height: 40px;
-    border-top: solid 1px rgb(242, 242, 242);
-    border-bottom: solid 1px rgb(242, 242, 242);
-    border-radius: 10px;
     margin-bottom: 30px;
-    margin-right: 250px;
-
 }
 .styleBouton{
     border: none;
@@ -143,12 +123,14 @@ p{
     padding-right: 15px;
 
 }
-
+/*zone de saisie de la ville */
 .inputVille{
     display: block;
     height: 40px;
     text-align: center;
     padding: 0;
+    border-top: solid 1px rgb(242, 242, 242); 
+    border-bottom: solid 1px rgb(242, 242, 242);
 }
 .inputVille input{
     border-color:rgb(242, 242, 242);
@@ -166,7 +148,6 @@ p{
     align-items: center;
     margin-bottom: 30px;
     height: 35px;
-    margin-right: 150px;
 }
 .titreFiltreDetails{
     margin-right: 30px;
@@ -182,6 +163,10 @@ p{
     border-radius: 50px ;
     border: solid 2px lightgray;
     border-left : none;
+    transition: background-color 0.5s;
+}
+.detailFiltreDetails:hover{
+    background-color: rgb(165, 207, 241);
 }
 
 .puceDuLibelle{
@@ -238,7 +223,7 @@ p{
 }
 
 #bigboxH{
-    /*la section hebergement est divisee de gauche à droite en 2 sous section hebergement et les plus populaires respectivement 70% et 30%*/
+    /*la section hebergement est divisee de gauche à droite en 2 sous sections hebergement et les plus populaires respectivement 70% et 30%*/
     width: 70%;
     background-color: rgb(242, 242, 242);
     border-radius: 20px;
@@ -256,6 +241,10 @@ p{
     /*les angles de la boite sont légèrement arrondis*/
     border-radius: 20px;
 }
+.affichePlus{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 .detail{
     /*dans box1 on intègre des blocks de details*/
@@ -270,9 +259,13 @@ p{
     padding: 3px;
     /*on écarte chaque bloque de 10px les uns des autres*/
     margin: 10px;
-    /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
-    overflow: hidden;
+    /* la souris change de forme quand on pointe sur une zone détail*/
     cursor: pointer;
+}
+.vignetteImage{
+    /*les éléments contenus dans vignette image (les children: les images ici) ne déborderont pas du cadre quand on va faire la transition*/
+    overflow: hidden;
+    border-radius: 20px 20px 0 0;
 }
 .image {
     width: 100%;
@@ -280,16 +273,20 @@ p{
     border-radius: 20px 20px 0 0;
     /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
     object-fit: cover;
-    /*overflow: hidden;*/
 }
 /*pour test zoom dans l'image*/
-.detail img {
-    transition: transform .5s ease;
+.vignetteImage img {
+    transition: transform 0.7s;
+    
 }
-.detail:hover img {
-    transform: scale(2.5);
-  }
-  
+.vignetteImage:hover img {
+    transform: scale(2.2);
+}
+/*et un petit effet qd on clic sur une vignette , pas terrible mais j'apprends*/
+.vignetteImage:active {
+    transform: scale(1.3);
+    overflow: visible;
+}
 
 .texte{
     background-color: white;
@@ -306,7 +303,7 @@ p{
 .etoiles{
     font-size: 9px;
     margin-top: -0.2rem;
-    /*les5 etoiles "enfants" seront en ligne horizontales*/
+    /*les 5 etoiles "enfants" seront en ligne horizontales*/
     display: flex;
     margin-bottom: 5px;
     margin-left : 1px;
@@ -343,6 +340,7 @@ p{
 
 .detailPopu{
     border: 5px;
+    height: 130px;
     background-color: white;
     border-radius: 20px;
     /*meme ombre que les hebergements*/
@@ -352,8 +350,7 @@ p{
     grid-template-columns: 1fr 2fr;
     margin: 10px;
     /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
-    overflow: hidden;
-    height: 120px;
+    overflow: hidden; 
 }
 .imagePopu{
     width: 110px;
@@ -380,6 +377,15 @@ p{
     margin-left: 40px;
     margin-right: 30px;
 }
+.deuxActivites{
+    height: 440px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.uneActivite{
+    height: 440px;
+}
 
 #listeActivite{
     display: grid;
@@ -397,10 +403,11 @@ p{
     margin: 10px;
     /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
     overflow: hidden;
+    
 }
 .imageActivite {
     width: 100%;
-    height: 360px;
+    height: 370px;
     border-radius: 20px 20px 0 0;
     /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
     object-fit: cover; 
@@ -408,6 +415,13 @@ p{
 .imageActivite2 {
     width: 100%;
     height: 150px;
+    border-radius: 20px 20px 0 0;
+    /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+    object-fit: cover; 
+}
+.imageActivite3 {
+    width: 100%;
+    height: 110px;
     border-radius: 20px 20px 0 0;
     /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
     object-fit: cover; 
@@ -424,29 +438,45 @@ p{
 
 /* Section Footer avec différents liens de navigation vers les autres pages du site ...................*/
 .boxFooter{
-    width: 100%;
     background-color: rgb(242, 242, 242);
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
     justify-content: space-around;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    
-
 }
 .boxFooter a{
+    text-decoration: none;
     font-size: 14px;
-    line-height: 25px;
-    border-top: none;
-    margin-left: 20px;
+}
+.boxFooter a:hover {
+    color: blue;
 }
 .boxFooter ul {
     list-style-type: none;
 }
-.boxFooter:hover {
-    border-top: none;
+.boxFooter li {
+    margin-bottom: 5px;
 }
 
+/* Le CSS pour les tablettes */
+@media screen and(max-width: 1024px) {
+    h1 {
+      font-size: 32px;
+    }
+  
+    p {
+      font-size: 20px;
+    }
+  }
+  
+  /* Le CSS pour les smartphones */
+  @media screen and(max-width: 767px) {
+    h1 {
+      font-size: 24px;
+    }
+  
+    p {
+      font-size: 16px;
+    }
+  }
 
 
 
