--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Raleway';
-    src: url('/font/Raleway-ExtraBold.ttf');
+    src: url('../font/Raleway-Medium.ttf');
 }
 
 body{
@@ -10,32 +10,31 @@ body{
 }
 
 .main-header{
-    margin-left: 40px;
     align-items: center;
-    display: inline-flex;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 40px;
 }
 
-
 .menu{
-    display: inline-flex;
+    display: flex;
     font-size: 14px;
     list-style: none;
-    margin-left : 230px;
-    margin-top: 25px;
+    align-items: baseline;
 }
 
 .menu a{
     color:rgba(144, 144, 144);
     text-decoration: none;
-    padding-top: 20px;
-    margin-left: 150px;
+    padding-top: 25px;
+    margin-left: 30px;
 }
 /* Apparence au survol des liens */
 .menu a:hover {
     color: blue;
     border-top: 2px solid blue;
 }
-.nmenu a:focus{
+.menu a:focus{
     color:gray;
 }
 .menu .bleuGras{
@@ -46,6 +45,11 @@ body{
     font-weight: bold;
     font-size: 14px;
     text-decoration: none;
+    color: black;
+}
+.Noir{
+    color:black;
+    font-size: 13px;
 }
 
 
@@ -109,7 +113,13 @@ p{
     border-radius: 0 10px 10px 0;
     background-color: blue;
     cursor: pointer;
-    
+}
+/*En fonction de la taille de l'écran, soit on affichera le texte rechercher sur le bouton, soit l'icone Loupe*/
+.RechercheTexte{
+    display: flex;
+}
+.fas.fa-search{
+    display: none;
 }
 .puceNavig{
     height: inherit;
@@ -121,7 +131,6 @@ p{
     background-color: rgb(242, 242, 242);
     padding-left: 15px;
     padding-right: 15px;
-
 }
 /*zone de saisie de la ville */
 .inputVille{
@@ -268,6 +277,7 @@ p{
     border-radius: 20px 20px 0 0;
 }
 .image {
+    display: block;
     width: 100%;
     height: 110px;
     border-radius: 20px 20px 0 0;
@@ -280,12 +290,15 @@ p{
     
 }
 .vignetteImage:hover img {
-    transform: scale(2.2);
+    transform: scale(2.1);
 }
 /*et un petit effet qd on clic sur une vignette , pas terrible mais j'apprends*/
 .vignetteImage:active {
-    transform: scale(1.3);
+    transform: scale(1.1);
     overflow: visible;
+}
+.vignetteImage:active img{
+   border-radius: 0;
 }
 
 .texte{
@@ -378,14 +391,12 @@ p{
     margin-right: 30px;
 }
 .deuxActivites{
-    height: 440px;
+    /*height: 440px;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.uneActivite{
-    height: 440px;
-}
+
 
 #listeActivite{
     display: grid;
@@ -399,15 +410,16 @@ p{
     border-radius: 20px;
     /*ombre portée*/
     box-shadow: 3px 4px 2px rgb(242, 242, 242);
-    /*on écarte chaque bloque de 10px les uns des autres*/
-    margin: 10px;
+    /*marge e ntre les bloc à gauche et à droite*/
+    margin-left: 10px;
+    margin-right: 10px;
     /*les éléments contenus dans détail (les children: les images par ex) ne déborderont pas du cadre*/
     overflow: hidden;
     
 }
 .imageActivite {
     width: 100%;
-    height: 370px;
+    height: 380px;
     border-radius: 20px 20px 0 0;
     /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
     object-fit: cover; 
@@ -456,25 +468,187 @@ p{
     margin-bottom: 5px;
 }
 
-/* Le CSS pour les tablettes */
-@media screen and(max-width: 1024px) {
-    h1 {
-      font-size: 32px;
+/* Le CSS pour les tablettes *//* Le CSS pour les tablettes *//* Le CSS pour les tablettes *//* Le CSS pour les tablettes */
+/* Le CSS pour les tablettes *//* Le CSS pour les tablettes *//* Le CSS pour les tablettes *//* Le CSS pour les tablettes */
+/* Le CSS pour les tablettes *//* Le CSS pour les tablettes *//* Le CSS pour les tablettes *//* Le CSS pour les tablettes */
+
+@media (max-width: 1024px) {
+    body{
+        background-color: rgb(177, 221, 177);
     }
+    
   
     p {
-      font-size: 20px;
+      font-size: 12px;
     }
   }
   
-  /* Le CSS pour les smartphones */
-  @media screen and(max-width: 767px) {
-    h1 {
-      font-size: 24px;
+  /* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones */
+  /* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones */
+  /* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones */
+  @media (max-width: 767px) {
+    
+    body{
+        background-color:rgb(214, 214, 171);
     }
-  
-    p {
-      font-size: 16px;
+    
+    .main-header{
+        width: 100%;
+        /*display: flex;
+        margin-top: 0px;*/
+        position: relative;
+    }
+    
+    
+    .menu{
+        margin-top: 0px;
+        display: flex;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        padding: 5px;
+    }
+    .petitMenu{
+        display: grid;
+        /*justify-content: space-around;*/
+        grid-template-columns: 50% 50%;
+        width: 100%;
+        position: absolute;
+        left: 10px;
+        top: 60px;
+        justify-self: center;
+    }
+
+    
+    .petitMenu a{
+        padding-bottom: 10px;
+        border-bottom: 2px solid rgb(107, 99, 99);
+    }
+    /* Apparence au survol des liens */
+    .petitMenu a:hover {
+    color: blue;
+    border-bottom: 2px solid blue;
+    border-top: none;
+    padding-bottom: inherit;
+    }
+    .menu a{
+        font-size: 19px;
+        margin-left: 0px;
+        justify-content: space-between;
+        padding-top: 0px;
+        
+    }
+    
+        
+    
+    /*Section Filtre ..........................................................................................*/
+    .sectionFiltre{
+        display: block;
+        width: 100%;
+        position: relative;
+        top: 60px;
+    }
+    .filtreTitre p {
+        font-size: 16px;
+    }
+    
+    .RechercheTexte{
+        display: none;
+    }
+    .fas.fa-search{
+        display: block;
+    }
+    .styleBouton{
+        border-radius: 10px;
+    }
+    .inputVille input{
+        font-size: 18px;
+    }
+    .filtreDetails{
+        display: block;
+        height: auto;
+
+    }
+    .titreFiltreDetails{
+        margin-bottom: revert;
+    }
+    .detailFiltreDetails{
+        margin-bottom: 5px;
+    }
+    
+    /* Partie section hebergement .............................................................................*/
+    .sectionHebergement{
+        /*2 blocks seront l'un en dessous de l'autre*/
+        display: flex;
+        flex-direction: column-reverse;
+        margin-bottom: 0px; 
+        margin-left: 30px; 
+        margin-right: 0px;
+        width: 110%;
+        position: relative;
+        top: 60px;
+        
+    }
+    .bigboxPopu {
+        width: 100%;
+        background-color: rgb(242, 242, 242);
+        border-radius: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    #bigboxH {
+        width: 100%;
+        background-color: rgb(242, 242, 242);
+        border-radius: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-right: 0px;
+    }
+    .box1 {
+        display: block;
+    }
+
+    /* Partie section activite .............................................................................*/
+    .sectionActivites{    
+        display: block;
+        position: relative;
+        top: 70px;
+    }
+    #listeActivite{
+        display: block;
+    }
+    .detailActivite{
+        margin-bottom: 20px;
+        width: 140%;
+        margin-left: -10px;
+    }
+    .imageActivite {
+        width: 100%;
+        height: 110px;
+        border-radius: 20px 20px 0 0;
+        /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+        object-fit: cover; 
+    }
+    .imageActivite2 {
+        width: 100%;
+        height: 110px;
+        border-radius: 20px 20px 0 0;
+        /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+        object-fit: cover; 
+    }
+    .imageActivite3 {
+        width: 100%;
+        height: 110px;
+        border-radius: 20px 20px 0 0;
+        /*l'image couvre l'espace (zoom) demandé avec height et width : ne se déforme pas*/
+        object-fit: cover; 
+    }
+
+    .boxFooter{
+        display: block;
+        position: relative;
+        top: 80px;
+        margin-left: 0px;
+        width: 130%;
     }
   }
 
