--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body{
     font-size: 14px;
     text-decoration: none;
     color: black;
-    margin-left: 10px;
+    
 }
 .Noir{
     color:black;
@@ -469,6 +469,45 @@ p{
     margin-bottom: 5px;
 }
 
+/*css pour les tablettes ****************************************************************/
+ /* *********************************************************************************************** */
+ /* *********************************************************************************************** */
+ /* *********************************************************************************************** */
+ /* *********************************************************************************************** */
+ @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    .sectionFiltre{
+        margin-bottom: 0;
+    } 
+    /* Partie section hebergement .............................................................................*/
+    .sectionHebergement{
+        /*2 blocks seront l'un en dessous de l'autre*/
+        display: flex;
+        flex-direction: column-reverse;
+        margin: 0; 
+        width: auto;
+        padding: 15px 0;
+    }
+    .bigboxPopu {
+        flex-direction: column;
+        width: auto;
+        margin-bottom: 20px;
+        background-color: transparent;
+    }
+    .fas.fa-chart-line{
+        padding-right: 15px;
+    }
+    .box2 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: auto;
+        background-color: transparent;
+    }
+    #bigboxH{
+        width: auto;
+        margin-right: 0;
+    }
+ 
+ }
   
   /* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones *//* Le CSS pour les smartphones */
   /* *********************************************************************************************** */
@@ -529,8 +568,6 @@ p{
     .filtreTitre p {
         font-size: 13px;
     }
-
-    
     .RechercheTexte{
         display: none;
     }
@@ -546,10 +583,9 @@ p{
     .filtreDetails{
         display: block;
         height: auto;
-
     }
     .titreFiltreDetails{
-        margin-bottom: revert;
+        margin-bottom: 10px;
     }
     .detailFiltreDetails{
         margin-bottom: 5px;
@@ -561,11 +597,7 @@ p{
         display: flex;
         flex-direction: column-reverse;
         margin: 0; 
-       /* margin-left: 30px; 
-        margin-right: 0px;*/
         width: auto;
-        /*position: relative;
-        top: 60px;*/
         padding: 15px 0;
         
     }
@@ -606,18 +638,14 @@ p{
         width: auto;
         margin-left: 10px;
     }
+    /*Contrairement à la vue Ecran, on donne la même hauteur aux images de la partie activités */ 
     .imageActivite {
-       
         height: 110px;
-       
     }
     .imageActivite2 {
-        
         height: 110px;
-   
     }
     .imageActivite3 {
-       
         height: 110px;       
     }
 
@@ -626,9 +654,14 @@ p{
         margin: 0;
         width: auto;
     }
+    .affichePlus{
+
+        margin-left: 20px;
+    }
   }
 
 
+ 
 
 
 
