--- a/css/style.css
+++ b/css/style.css
@@ -526,10 +526,10 @@ p{
     
       
     .menu{
-        margin-top: 0px;
+    /*    margin-top: 0px;
         display: flex;
         flex-direction: row-reverse;
-        flex-wrap: wrap;
+        flex-wrap: wrap;*/
         padding: 5px;
     }
     .menu a{
